maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:22: error: not found: value pox
  else if (!aMurOuest(x+1,y) && pox!=getMondeLargeur()-1){suivant(x+1,y,i+1)}
                                ^JediEscaper:23: error: not found: value poy
  else if (!aMurNord(x,y+1) && poy==getMondeHauteur()-1){suivant(x,y+1,i+1)}
                               ^JediEscaper:24: error: not found: value poy
  else if (!aMurNord(x,y) && poy==0){suivant(x,y-1,i+1)}
                             ^