maze.lessons.maze.shortestpath.ShortestPathMaze.scala.code
override def run(){
  reperage()
}
def reperage(){
  var pox=0
  var poy=0
  for (x<-0 to getMondeLargeur()-1){
  	for (y<-0 to getMondeHauteur()-1){
      if (aBiscuit(x,y)==true){
        	pox=x
        	poy=y
      }
    }
  }
  suivant(pox,poy,0)
}

def suivant(x:Int,y:Int,i:Int){
  setIndication(x,y,i)
  if  (!aMurOuest(x,y) && x!=0){suivant(x-1,y,i+1)}
  else if (!aMurOuest(x+1,y) && pox!=getMondeLargeur()-1){suivant(x+1,y,i+1)}
  else if (!aMurNord(x,y+1) && poy==getMondeHauteur()-1){suivant(x,y+1,i+1)}
  else if (!aMurNord(x,y) && poy==0){suivant(x,y-1,i+1)}
}